# base_graphql_with_user

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-redis.yml  docker-tests.yml  example.http  pyproject.toml  run_tests.py  start.sh
alembic/: env.py
app/: main.py
app/core/: database.py  redis.py  settings.py
app/exceptions/: __init__.py
app/graphql/: context.py  context_getter.py  custom_graphql_route.py  permission.py
app/graphql/mutations/: __init__.py  user_mutation.py
app/graphql/queries/: __init__.py  user_query.py
app/graphql/types/: user_types.py
app/models/: __init__.py  base_model.py  mixins.py  user_model.py
app/repositories/: user_repository.py  user_repository_protocol.py
app/schemas/: base_schema.py  persona_schema.py  user_schema.py
app/services/: session_service.py  user_auth_service.py  user_service.py
app/utils/: error_code.py  graphql_error_formatter.py  validators.py
tests/: conftest.py  pytest.ini  test_database.py
tests/01_models/: test_user_model.py
tests/02_schemas/: conftest.py  test_user_schema.py
tests/03_services/: test_session_service.py  test_user_auth_service.py  test_user_service.py
tests/04_graphql/: conftest.py  test_user_mutation.py  test_user_query.py
tests/helpers/: __init__.py  asserts.py  core.py
tests/utils/: base_graphql_test.py
